--- a/69_Test_Documentaiton_Generator/Test.html
+++ b/69_Test_Documentaiton_Generator/Test.html
@@ -97,7 +97,7 @@
       width: 100%;
       border-collapse: collapse;
       text-align: center;
-      font-size: 40px ;
+      font-size: 30px ;
     }
 
     th, td {
@@ -252,10 +252,25 @@
   </div>
     <div id="Title">
       Acceptance Level
-      <br><br> Test Raport
-      <br><br> MWP3_2C1 - Stonogi
-      <br><br> 2023-05-18
-      <br><br> SW Version: main_2023-05-18_16-19-10.cpp
+      <br> Test Raport
+      <br><br><br>
+
+      <table>
+        <tr>
+          <td>Project Name</td>
+          <td>MWP3_2C1 - Stonogi</td>
+        </tr>
+        <tr>
+          <td>Date</td>
+          <td>2023-05-18</td>
+        </tr>
+        <tr>
+          <td>SW Version</td>
+          <td>main_2023-05-18_16-19-10.cpp</td>
+        </tr>
+      </table>
+
+      <br><br><br>
 
       <table>
         <tr>
